[project]
name = "xno"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.11.1",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.3",
    "readerwriterlock>=1.0.9",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]
